@@ -1,5 +1,13 @@
 2013-04-09 Miguel de Dios <miguel.dedios@artica.es>
 	
+	* godmode/extensions.php: removed the link to delete or disable the
+	update manager because this extension runs inner inner the guts of
+	Pandora and when disabled or deleted causes more problems.
+	
+	Fixes: #3609993
+
+2013-04-09 Miguel de Dios <miguel.dedios@artica.es>
+	
 	* mobile/index.php, mobile/operation/groups.php,
 	mobile/operation/agents.php, mobile/operation/alerts.php,
 	mobile/operation/agent.php, mobile/operation/events.php,
